--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
     <link rel="stylesheet" href="all.css">
 </head>
 <body>
-    <h1 style="color:red">title dev2</h1>
+    <h1 style="color:red">title commit crash</h1>
 </body>
 </html>
